<resources>
    <string name="app_name">Expenses Saver</string>
    <string name="action_settings">Settings</string>
    <string name="currency">$</string>
    <string name="action_reset_all">Restart all values</string>
    <string name="action_remove_all">Remove all counters</string>
    <string name="add_dialog_title">Add new counter</string>
    <string name="add_dialog_positive">Add</string>
    <string name="alert_dialog_negative">Cancel</string>
    <string name="alert_dialog_positive">Okay</string>
    <string name="add_dialog_text_view_title">Title: </string>
    <string name="add_dialog_text_view_value">Value: </string>
    <string name="add_dialog_text_view_amount">Amount: </string>
    <string name="add_dialog_text_view_step">Steps: </string>
    <string name="add_dialog_text_view_title_hint">Name of counter</string>
    <string name="add_dialog_text_view_value_hint">How many counters are there?</string>
    <string name="add_dialog_text_view_amount_hint">Current value of all counters</string>
    <string name="add_dialog_text_view_steps_hint">How much is each item?</string>
    <string name="toast_no_name">Name must not be empty!</string>
    <string name="menu_action_delete">Delete counter</string>
    <string name="menu_action_reset">Reset all values</string>
    <string name="menu_action_edit">Edit</string>
    <string name="tally_options_title">Counter Options</string>
    <string name="delete_dialog_title">Delete Counter</string>
    <string name="delete_message_confirm">Are you sure want to delete this counter?</string>
    <string name="delete_dialog_positive">Delete</string>
    <string name="delete_done">Tally deleted</string>
    <string name="edit_dialog_title">Edit Counter</string>
    <string name="edit_dialog_positive">Save</string>
    <string name="reset_dialog_title">Reset All</string>
    <string name="reset_dialog_confirm">Are you sure want to reset all values?</string>
    <string name="reset_dialog_positive">Reset</string>
    <string name="reset_done">Counter reset</string>
    <string name="reset_all_dialog_title">Restart all</string>
    <string name="reset_all_dialog_confirm">Are you sure want to restart all counters?</string>
    <string name="reset_all_dialog_positive">Reset</string>
    <string name="reset_all_done">All counters reset</string>
    <string name="remove_all_dialog_title">Remove all</string>
    <string name="remove_all_dialog_confirm">Are you sure want to remove all the counters?</string>
    <string name="remove_all_dialog_positive">Delete all</string>
    <string name="remove_all_done">Deleted all counters</string>
    <string name="settings_group_controls">Controls</string>
    <string name="settings_controls_vibration_title">Turn on vibration</string>
    <string name="settings_controls_vibration_summary">Vibrate on changes</string>
    <string name="settings_controls_sounds_title">Turn on sounds</string>
    <string name="settings_controls_sounds_summary">Play sounds</string>
    <string name="settings_group_about">About</string>
    <string name="settings_about_version_title">Version</string>
    <string name="settings_unknown">Unknown</string>
    <string name="settings_about_developer_title">Developer</string>
    <string name="settings_about_developer_name"><b><u>Developer: </u></b> Mai Truong</string>
    <string name="settings_about_developer_email"><b><u>Email: </u></b>maitruong2801@gmail.com</string>
    <string name="settings_about_developer_github"><b><u>Github</u></b>: <a href="https://github.com/maiquynhtruong/Expenses-saver">https://github.com/maiquynhtruong/Expenses-saver</a></string>
    <string name="settings_about_developer_positive">Close</string>
    <string name="settings_about_rate_app_title">Rate this app</string>
    <string name="settings_about_rate_app_remind">Remind me later</string>
    <string name="settings_about_rate_app_no_thanks">No, thanks</string>
    <string name="settings_about_rate_app_message">If you enjoy using this app please take a moment to rate </string>
    <string name="settings_about_rate_app_error_message">Cannot open Google play to rate app</string>


</resources>
