<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/dialog_layout_padding">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dialog_text_view_title"
            style="@style/dialog_title_size"
            />
        <EditText
            android:id="@+id/edit_dialog_edit_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLines="1"
            style="@style/dialog_value_size"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dialog_text_view_value"
            style="@style/dialog_title_size"/>
        <EditText
            android:id="@+id/edit_dialog_edit_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberSigned"
            android:maxLength="8"
            android:maxLines="1"
            style="@style/dialog_value_size"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dialog_text_view_amount"
            style="@style/dialog_title_size"/>
        <EditText
            android:id="@+id/edit_dialog_edit_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:maxLines="1"
            style="@style/dialog_value_size"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_dialog_text_view_step"
            style="@style/dialog_title_size"/>
        <EditText
            android:id="@+id/edit_dialog_edit_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:maxLength="8"
            android:maxLines="1"
            style="@style/dialog_value_size"/>
    </LinearLayout>

</ScrollView>